--- a/js/templates/date-picker.html
+++ b/js/templates/date-picker.html
@@ -2,11 +2,23 @@
 
 <h1>jQRangeSlider demos</h1>
 
-<form onsubmit="return false">
+<!-- <form onsubmit="return false">
 <dl id="themeSelector">
   <dt class="classic selected">Classic</dt>
   <dd class="classic selected"><img src="/vendor/jQRangeSlider-5.7.2/demo/img/classicTheme.png" alt="classic" /></dd>
   <dt class="iThing">iThing</dt>
   <dd class="iThing"><img src="/vendor/jQRangeSlider-5.7.2/demo/img/iThingTheme.png" alt="iThing" /></dd>
 </dl>
-</form>
+</form> -->
+
+<div id="slider"></div>
+
+
+<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
+<script src="/vendor/jQRangeSlider-5.7.2/demo/lib/jquery-ui/js/jquery-ui-1.8.16.custom.min.js"></script>
+<script src="/vendor/jQRangeSlider-5.7.2/jQDateRangeSlider-withRuler-min.js"></script>
+<script>
+  //<!--
+  $("#slider").dateRangeSlider();
+  //-->
+</script>
