--- a/js/templates/date-picker.html
+++ b/js/templates/date-picker.html
@@ -1,17 +1,25 @@
-<input type="range" data-slider-min="0" data-slider-max="20" data-slider-step="1" >
+<div class="row">
+  <div class="col-sm-8 col-sm-offset-2">
+    <p>{{ date }}</p>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-2">
+    <span class="pull-right">1/01/2016</span>
+  </div>
+  <div class="col-sm-8">
+    <input id="date-picker" type="range" min="0" max="20" step="1" value="5" ng-model="date">
+  </div>
+  <div class="col-sm-2">
+    <span class="pull-left">12/31/2016</span>
+  </div>
+</div>
 
-<h1>jQRangeSlider demos</h1>
 
-<!-- <form onsubmit="return false">
-<dl id="themeSelector">
-  <dt class="classic selected">Classic</dt>
-  <dd class="classic selected"><img src="/vendor/jQRangeSlider-5.7.2/demo/img/classicTheme.png" alt="classic" /></dd>
-  <dt class="iThing">iThing</dt>
-  <dd class="iThing"><img src="/vendor/jQRangeSlider-5.7.2/demo/img/iThingTheme.png" alt="iThing" /></dd>
-</dl>
-</form> -->
 
-<div id="slider"></div>
+
+
+<!-- <div id="slider"></div>
 
 
 <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.min.js"></script>
@@ -21,4 +29,4 @@
   //<!--
   $("#slider").dateRangeSlider();
   //-->
-</script>
+<!-- </script> -->
