--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -8,4 +8,14 @@
 // DATE PICKER
 #date-picker {
   display: inline-block;
+  padding: 0;
+}
+
+#date-wrapper {
+  position: relative;
+  height: 20px;
+  #date-label {
+    position: absolute;
+    left: 0;
+  }
 }
