--- a/js/templates/date-picker.html
+++ b/js/templates/date-picker.html
@@ -1,8 +1,8 @@
-<h2>{{ dateInfo.date }}</h2>
+<h2>{{ dateInfo }}</h2>
 <div class="row">
   <div class="col-xs-8 col-xs-offset-2 ">
     <div id="date-wrapper">
-      <span id="date-label">{{ dateInfo.date | date }}</span>
+      <span id="date-label">{{ dateInfo }}</span>
     </div>
   </div>
 </div>
@@ -17,3 +17,5 @@
     <span class="text-left">12/31/2016</span>
   </div>
 </div>
+
+<a ng-click="getScope()">click for scope</a>
