--- a/js/templates/date-picker.html
+++ b/js/templates/date-picker.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-xs-8 col-xs-offset-2 ">
     <div id="date-wrapper">
-      <span id="date-label">{{ dateInfo }}</span>
+      <span id="date-label">{{ dateInfo | date }}</span>
     </div>
   </div>
 </div>
@@ -11,7 +11,7 @@
     <span class="text-right">1/01/2016</span>
   </div>
   <div class="col-xs-8">
-    <input id="date-picker" type="range" min="1" max="365" step="1" value="1">
+    <input id="date-picker" type="range" min="1" max="365" step="1" value="1" ng-model="dateValue">
   </div>
   <div class="col-xs-2">
     <span class="text-left">12/31/2016</span>
