--- a/js/templates/date-picker.html
+++ b/js/templates/date-picker.html
@@ -1,4 +1,4 @@
-<h2>{{ dateInfo }}</h2>
+
 <div class="row">
   <div class="col-xs-8 col-xs-offset-2 ">
     <div id="date-wrapper">
@@ -11,11 +11,11 @@
     <span class="text-right">1/01/2016</span>
   </div>
   <div class="col-xs-8">
-    <input id="date-picker" type="range" min="1" max="365" step="1" value="1" ng-model="dateValue">
+    <input id="date-picker" type="range" min="1" max="365" step="1" default-value="1" ng-model="dateValue">
   </div>
   <div class="col-xs-2">
     <span class="text-left">12/31/2016</span>
   </div>
 </div>
-
-<a ng-click="getScope()">click for scope</a>
+<input type="text" ng-model='dateValue' ng-change='setDate()'>
+<!-- <a ng-click="getScope()">click for scope</a> -->
