--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,6 +11,7 @@
   height: 20px; }
   #date-wrapper #date-label {
     position: absolute;
-    left: 0; }
+    left: 0;
+    white-space: pre; }
 
 /*# sourceMappingURL=styles.css.map */
