--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,4 +14,7 @@
     left: 0;
     white-space: pre; }
 
+#left-panel .stocks-panel {
+  font-size: 10px; }
+
 /*# sourceMappingURL=styles.css.map */
