--- a/js/templates/date-picker.html
+++ b/js/templates/date-picker.html
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-xs-8 col-xs-offset-2 ">
     <div id="date-wrapper">
-      <span id="date-label">{{ dateInfo | date }}</span>
+      <span id="date-label">{{ dateInfo.date | date }}</span>
     </div>
   </div>
 </div>
