--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,23 +1,50 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #94bf8b;
+}
+
+.content-panel {
+  background-color: #eee;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 3px 3px 2px #888888;
+  .panel-heading {
+    display: inline-block;
+    margin-top: 10px;
+    font-size: 24px;
+    font-weight: 700;
+    font-variant: small-caps;
+  }
+}
 
 /*MAIN LAYOUT*/
 
 #main-nav {
   border-radius: 0;
+  background-color: #111;
+  border: none;
+  border-bottom: 1px solid #eee;
 }
 
 // DATE PICKER
-#date-picker {
-  display: inline-block;
-  padding: 0;
-}
+#datepicker-panel {
+  margin-bottom: 44px;
+  #date-picker {
+    display: inline-block;
+    padding: 0;
+  }
 
-#date-wrapper {
-  position: relative;
-  height: 20px;
-  #date-label {
-    position: absolute;
-    left: 0;
-    white-space: pre;
+  #date-wrapper {
+    position: relative;
+    height: 20px;
+    #date-label {
+      position: absolute;
+      left: 0;
+      white-space: pre;
+    }
   }
 }
 
@@ -26,4 +53,8 @@
   .stocks-panel {
     font-size: 10px;
   }
+}
+
+// TRADE
+#trade-panel {
 }
