--- a/js/templates/date-picker.html
+++ b/js/templates/date-picker.html
@@ -18,6 +18,6 @@
       <span class="text-left">12/31/2016</span>
     </div>
   </div>
-  <input type="text" ng-model='dateValue' ng-change='setDate()'>
+  <input type="date" ng-model='dateValue' ng-change='setDate()' ng-if='manualDate'>
   <!-- <a ng-click="getScope()">click for scope</a> -->
 </div>
