--- a/js/templates/portfolio.html
+++ b/js/templates/portfolio.html
@@ -1,10 +1,11 @@
-<!-- <a ng-click='getStocks()'>format the stock!</a> -->
-<div id="transactions" class='content-panel'>
-  <panel-heading selected='selectedContent'></panel-heading>
-  <label>Filter: 
-    <input type="text" ng-model='transactionFilter'>
-  </label>
-  <table class="table table-striped table-hover stocks-panel">
+<div id="portfolio-panel" class="content-panel">
+  <div class="heading row">
+    <div class="col-xs-12">
+      <panel-heading selected='selectedContent'></panel-heading>
+    </div>
+  </div>
+
+  <table class="table table-striped stocks-panel">
     <tr>
       <th>Date</th>
       <th>Symbol</th>
