--- a/js/templates/portfolio.html
+++ b/js/templates/portfolio.html
@@ -31,26 +31,25 @@
       <th>Symbol</th>
       <th>Quantity</th>
       <th>Cash Basis</th>
+      <th>Current Price</th>
       <th>Current Value</th>
       <th>Profit/Loss</th>
-      <th>Current Price</th>
       <th>1d</th>
       <th>7d</th>
       <th>30d</th>
     </tr>
-    <tr>
-      <td>01-04-2017</td>
-      <td>AER</td>
-      <td>BUY</td>
-      <td>6000</td>
-      <td>60000</td>
-    </tr>
     <tr ng-repeat='transaction in transactions.all | filter : transactionFilter | limitTo : 15'>
-      <td>{{ transaction.date | date }}</td>
       <td>{{ transaction.symbol }}</td>
-      <td>{{ transaction.type }}</td>
       <td>{{ transaction.quantity }}</td>
-      <td>{{ transaction.price | currency }}</td>
+      <td>{{ transaction.price / transaction.quantity | currency }}</td>
+      <td>{{ transaction.historicalInfo.price | currency }}</td>
+      <td>{{ transaction.historicalInfo.price * transaction.quantity | currency }}</td>
+      <td>{{ currentProfit(transaction) | currency }}</td>
+      <td>{{ transaction.historicalInfo.dayAgo | currency }}</td>
+      <td>{{ transaction.historicalInfo.weekAgo | currency }}</td>
+      <td>{{ transaction.historicalInfo.monthAgo | currency }}</td>
     </tr>
   </table>
+
+  <a ng-click=''>click</a> {{ ownedStocks }}
 </div>
