checks on transactions

--- a/js/templates/portfolio.html
+++ b/js/templates/portfolio.html
@@ -9,6 +9,7 @@
   <table class="table table-striped portfolio-stats-table">
     <thead>
       <tr>
+        <th>Cash</th>
         <th>Cash Basis</th>
         <th>Current Value</th>
         <th>Profit/Loss</th>
@@ -51,5 +52,6 @@
     </tr>
   </table>
 
-  <a ng-click=''>click</a> {{ ownedStocks }}
+  <a ng-click='getStocks()'>get stocks</a>
+  {{ yep }}
 </div>
